third_party/move/move-compiler-v2/tests/checking/inlining/native_inline.exp

Diagnostics:
error: Inline function `foo` must not be native
  ┌─ tests/checking/inlining/native_inline.move:3:5
  │
3 │     public native inline fun foo();
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
