third_party/move/move-compiler-v2/tests/checking/inlining/native_inline.move
module 0x42::Test {

    public native inline fun foo();

    public fun test() {
        foo()
    }
}
